<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">


    <ImageView
        android:id="@+id/ivCrimePhoto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/ibtnCrimeCamera"
        app:layout_constraintEnd_toStartOf="@+id/tvCrimeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibtnCrimeCamera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toTopOf="@+id/tvCrimeDetails"
        app:layout_constraintEnd_toEndOf="@+id/ivCrimePhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCrimePhoto" />


    <TextView
        android:id="@+id/tvCrimeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivCrimePhoto"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCrimeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvCrimeTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvCrimeTitle" />


    <TextView
        android:id="@+id/tvCrimeDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintBottom_toTopOf="@+id/btnCrimeDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibtnCrimeCamera" />

    <Button
        android:id="@+id/btnCrimeDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cbCrimeSolved"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCrimeDetails"
        tools:text="Wed May 11 11:56 EST 2022" />

    <CheckBox
        android:id="@+id/cbCrimeSolved"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label"
        app:layout_constraintBottom_toTopOf="@+id/btnChooseSuspect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCrimeDate" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChooseSuspect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crime_suspect_text"
        app:layout_constraintBottom_toTopOf="@+id/btnSendCrimeReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbCrimeSolved" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSendCrimeReport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="352dp"
        android:text="@string/crime_report_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChooseSuspect" />

</androidx.constraintlayout.widget.ConstraintLayout>